Changes in version 1.2.6 ------------------------ * Html inline images for tests are now clickable

--- a/src/main/resources/e2e/tips/reportng/messages/reportng_fr.properties
+++ b/src/main/resources/e2e/tips/reportng/messages/reportng_fr.properties
@@ -10,7 +10,7 @@ failed=&#x00C9;chou&#x00E9;
 failed.tooltip=Quelques tests ont &#x00E9;chou&#x00E9;.
 failedConfiguration=Configuration &#x00C9;chou&#x00E9;e
 failedTests=Tests &#x00C9;chou&#x00E9;s
-generatedBy=G&#x00E9;n&#x00E9;r&#x00E9;s par <a href=https://testng.org/ target="_top">TestNG</a> avec <a href="https://reportng.uncommons.org/" target="_top">ReportNG</a>
+generatedBy=G&#x00E9;n&#x00E9;r&#x00E9;s par <a href=https://testng.org/ target="_top">TestNG</a> avec <a href="https://e2e.tips/reportng/" target="_top">ReportNG</a>
 groups=Groupes
 groupsFor=Groupes pour
 logOutput=Sortie de Journal
