--- a/src/main/resources/testee/it/reportng/messages/reportng_fr.properties
+++ b/src/main/resources/testee/it/reportng/messages/reportng_fr.properties
@@ -10,7 +10,7 @@ failed=&#x00C9;chou&#x00E9;
 failed.tooltip=Quelques tests ont &#x00E9;chou&#x00E9;.
 failedConfiguration=Configuration &#x00C9;chou&#x00E9;e
 failedTests=Tests &#x00C9;chou&#x00E9;s
-generatedBy=G&#x00E9;n&#x00E9;r&#x00E9;s par <a href=https://testng.org/ target="_top">TestNG</a> avec <a href="https://testee.it/reportng/" target="_top">ReportNG</a>
+generatedBy=&#9432; <a href=https://testee.it/ target="_top">Testee.IT</a> G&#x00E9;n&#x00E9;r&#x00E9;s par <a href=https://testng.org/ target="_top">TestNG</a> avec <a href="https://testee.it/reportng/" target="_top">ReportNG</a>
 groups=Groupes
 groupsFor=Groupes pour
 logOutput=Sortie de Journal
