overview.html.vm rework

--- a/src/main/resources/testee/it/reportng/messages/reportng_pt.properties
+++ b/src/main/resources/testee/it/reportng/messages/reportng_pt.properties
@@ -10,7 +10,7 @@ failed=Falha
 failed.tooltip=Alguns testes falharam.
 failedConfiguration=Configura&#x00E7;&#x00E3;o dos testes com Falha
 failedTests=Testes com Falha
-generatedBy=Info: <a href=https://testee.it/ target="_top">Testee.IT</a> Gerado pelo <a href=https://testng.org/ target="_top">TestNG</a> com o <a href="https://testee.it/reportng/" target="_top">ReportNG</a>
+generatedBy=Info: <a href=https://testee.it/ target="_top">Testee.IT</a> gerado pelo <a href=https://testng.org/ target="_top">TestNG</a> com o <a href="https://testee.it/reportng/" target="_top">ReportNG</a>
 groups=Grupos
 groupsFor=Grupos para
 logOutput=Sa&#x00ED;da do Log
