--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+Changes in version 1.3.1
+------------------------
+* Kotlin 1.4.20
+* Html report template update
+
+
 Changes in version 1.3.0
 ------------------------
 * Java to Kotlin migration
