--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+Changes in version 1.3.2
+------------------------
+* Extend test example for reportNG
+* Html report template update more space for result table
+
+
 Changes in version 1.3.1
 ------------------------
 * Kotlin 1.4.20
