--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+Changes in version 1.3.3
+------------------------
+* Extend passed test methods text width
+
 Changes in version 1.3.2
 ------------------------
 * Extend test example for reportNG
