--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,13 @@
+Changes in version 1.3.4
+------------------------
+* Kotlin 1.4.32
+* Extend report with total duration info
+
+
 Changes in version 1.3.3
 ------------------------
 * Extend passed test methods text width
+
 
 Changes in version 1.3.2
 ------------------------
