--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+Changes in version 1.3.7
+------------------------
+release 1.3.7
+* Kotlin 1.5.21
+* TestNG 7.4.0
+
+
 Changes in version 1.3.6
 ------------------------
 release 1.3.6
