--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+Changes in version 1.3.9
+------------------------
+* Kotlin: 1.5.31
+* RuntimeTestListener: generate intermediate reports during test execution with multithreading support
+
+
 Changes in version 1.3.8
 ------------------------
 * Kotlin 1.5.30
