--- a/src/main/resources/testee/it/reportng/messages/reportng_fr.properties
+++ b/src/main/resources/testee/it/reportng/messages/reportng_fr.properties
@@ -11,7 +11,7 @@ failed=&#x00C9;chou&#x00E9;
 failed.tooltip=Quelques tests ont &#x00E9;chou&#x00E9;.
 failedConfiguration=Configuration &#x00C9;chou&#x00E9;e
 failedTests=Tests &#x00C9;chou&#x00E9;s
-generatedBy=Info: <a href=https://testee.it/ target="_top">testee.it</a> g&#x00E9;n&#x00E9;r&#x00E9;s par <a href=https://testng.org/ target="_top">TestNG</a> avec <a href="https://testee.it/reportng/" target="_top">ReportNG</a>
+generatedBy=Info: <a href=https://github.com/hibissscus/testee target="_top">testee</a> g&#x00E9;n&#x00E9;r&#x00E9;s par <a href="https://github.com/hibissscus/reportng" target="_top">ReportNG</a>
 groups=Groupes
 groupsFor=Groupes pour
 logOutput=Sortie de Journal
