--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,18 @@
+Changes in version 1.4.6
+------------------------
+* kotlin 1.7.0
+
+
+Changes in version 1.4.5
+------------------------
+* testng 7.6.0
+
+
+Changes in version 1.4.4
+------------------------
+* Fix overview html to image conversion
+
+
 Changes in version 1.4.3
 ------------------------
 * Toggle different type of tests
