--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+Changes in version 1.4.7
+------------------------
+* Kotlin: 1.7.10
+* TestNG 7.6.1
+
+
 Changes in version 1.4.6
 ------------------------
 * kotlin 1.7.0
