--- a/src/main/resources/testee/it/reportng/messages/reportng_pt.properties
+++ b/src/main/resources/testee/it/reportng/messages/reportng_pt.properties
@@ -11,7 +11,8 @@ failed=Falha
 failed.tooltip=Alguns testes falharam.
 failedConfiguration=Configura&#x00E7;&#x00E3;o dos testes com Falha
 failedTests=Testes com Falha
-generatedBy=Info: <a href=https://github.com/hibissscus/testee target="_top">testee</a> gerado pelo &#127752;<a href="https://github.com/hibissscus/reportng" target="_top">ReportNG</a>
+generatedByTestee=Info: <a href=https://github.com/hibissscus/testee target="_top">Testee</a>
+generatedBy= gerado pelo &#127752;<a href="https://github.com/hibissscus/reportng" target="_top">ReportNG</a>
 groups=Grupos
 groupsFor=Grupos para
 logOutput=Sa&#x00ED;da do Log
