--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Changes in version 1.5.0
+------------------------
+* Comparator for sorting TestNG test results by passing order
+
+
 Changes in version 1.4.9
 ------------------------
 * Kotlin 1.7.20
