Changes in version 1.5.3 ------------------------ * group column adjustment

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Changes in version 1.5.3
+------------------------
+* group column adjustment
+
+
 Changes in version 1.5.2
 ------------------------
 * Added group column on overview table
