--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Changes in version 1.6.3
+------------------------
+* getMainScreenshots
+
+
 Changes in version 1.6.2
 ------------------------
 * fix getScreenshots
