--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Changes in version 1.6.5
+------------------------
+* fix title css in the presentation mode
+
+
 Changes in version 1.6.4
 ------------------------
 * presentation mode
