--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+Changes in version 1.6.6
+------------------------
+* clean-up
+* remove e2e folder before zip
+
+
 Changes in version 1.6.5
 ------------------------
 * fix title css in the presentation mode
