--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Changes in version 1.6.8
+------------------------
+* min-width for fragments
+
+
 Changes in version 1.6.7
 ------------------------
 * small font size
