--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Changes in version 1.7.0
+------------------------
+* normalize fragment value
+
+
 Changes in version 1.6.9
 ------------------------
 * test method name more visible
