--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Changes in version 1.7.1
+------------------------
+* report test description with log output
+
+
 Changes in version 1.7.0
 ------------------------
 * normalize fragment value
