--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Changes in version 1.7.7
+------------------------
+* underline relevant stack trace message
+
+
 Changes in version 1.7.6
 ------------------------
 * copy to clipboard the relevant stack trace message
