--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+Changes in version 1.8.1
+------------------------
+* fix sortByValue
+
+
 Changes in version 1.8.0
 ------------------------
 * Kotlin 2.2.0
